<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".QueryActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInput_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInput_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_price"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increment"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/_0"
            android:textSize="@dimen/ts_24sp" />

        <Button
            android:id="@+id/decrement"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInput_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_supplier_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInput_supplier_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_sNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_suppliernumber"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/insert_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_layout"
            android:text="@string/add_it" />

        <Button
            android:id="@+id/delete_product"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_layout"
            android:text="@string/delete_it" />

        <Button
            android:id="@+id/update_product"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_layout"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/call_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_layout"
            android:drawableLeft="@drawable/call"
            android:drawablePadding="-40dp"
            android:text="@string/call" />

    </LinearLayout>
</LinearLayout>