<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="25dp"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/dummy_text1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/name_tv"
                android:layout_marginTop="-10dp"
                android:layout_toEndOf="@+id/name_tv"
                android:text="@string/divider"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/name_tv"
                android:layout_toEndOf="@+id/divider"
                android:text="@string/dollar"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_24sp" />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/currency"
                android:text="@string/dummy2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_24sp" />

            <ImageView
                android:id="@+id/cart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_below="@id/name_tv"
                android:layout_marginRight="28dp"
                android:layout_marginTop="10.5dp"
                android:src="@drawable/cart2" />

            <TextView
                android:id="@+id/sale_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_tv"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/sale_button_layout"
                android:fontFamily="@font/neotric"
                android:paddingBottom="11dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="11dp"
                android:text="@string/sale"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_below="@id/name_tv"
                android:layout_marginRight="2dp"
                android:layout_marginTop="8.8dp"
                android:text="@string/_19"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_24sp" />

            <TextView
                android:id="@+id/supplier_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/quantity_tv"
                android:layout_marginTop="-30dp"
                android:fontFamily="@font/lato"
                android:paddingRight="5dp"
                android:paddingTop="60dp"
                android:text="@string/dummy3"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/supplier_no_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/supplier_tv"
                android:fontFamily="@font/lato"
                android:padding="5dp"
                android:text="@string/_9876543320"
                android:textColor="@color/white" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>