<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/insert_product"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_layout"
            android:fontFamily="font/lato"
            android:text="@string/insert_new"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_24sp" />

        <Button
            android:id="@+id/show_stock"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_layout"
            android:fontFamily="font/lato"
            android:text="@string/show_stocks"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_24sp" />

        <Button
            android:id="@+id/delete_table_btn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_layout"
            android:fontFamily="@font/lato"
            android:text="@string/delete_all_stocks"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_24sp" />

    </LinearLayout>
</RelativeLayout>